cargo_errors.txt
    Checking windows-sys v0.61.2
    Checking form_urlencoded v1.2.2
    Checking sync_wrapper v1.0.2
    Checking tower v0.5.3
    Checking axum-core v0.4.5
    Checking url v2.5.8
    Checking multiaddr v0.18.2
    Checking libp2p-core v0.42.0
    Checking libp2p-tls v0.5.0
    Checking libp2p-yamux v0.46.0
    Checking libp2p-noise v0.45.0
    Checking axum v0.7.9
    Checking socket2 v0.6.3
    Checking mio v1.1.1
    Checking winapi-util v0.1.11
    Checking if-addrs v0.15.0
    Checking errno v0.3.14
    Checking rustix v1.1.4
    Checking termcolor v1.4.1
    Checking if-watch v3.2.2
    Checking quinn-udp v0.5.14
    Checking tokio v1.50.0
    Checking wasmprinter v0.221.3
    Checking rustix v0.38.44
    Checking nu-ansi-term v0.50.3
    Checking cap-net-ext v3.4.5
    Checking tracing-subscriber v0.3.23
    Checking wasmtime-environ v29.0.1
    Checking tokio-util v0.7.18
    Checking libp2p-swarm v0.45.1
    Checking tokio-stream v0.1.18
    Checking quinn v0.11.9
    Checking libp2p-tcp v0.42.0
    Checking h2 v0.4.13
    Checking tower v0.4.13
    Checking libp2p-quic v0.11.1
    Checking libp2p-kad v0.46.2
    Checking libp2p-allow-block-list v0.4.0
    Checking libp2p-connection-limits v0.4.0
    Checking wasmtime-cranelift v29.0.1
    Checking libp2p v0.54.1
    Checking hyper v1.8.1
    Checking hyper-util v0.1.20
    Checking wasmtime v29.0.1
    Checking hyper-timeout v0.5.2
    Checking tonic v0.12.3
    Checking liop-core v0.1.0 (Z:\Nekzus-Solutions\Active-Projects\NMP-v1.0-alpha\sdks\rust\crates\core)
    Checking wiggle v29.0.1
    Checking wasmtime-wasi v29.0.1
    Checking liop-node v0.1.0 (Z:\Nekzus-Solutions\Active-Projects\NMP-v1.0-alpha\servers\liop-node)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `nmp_core`
  --> servers\liop-node\src\executor.rs:10:5
   |
10 | use nmp_core::v1::LogicResponse;
   |     ^^^^^^^^ use of unresolved module or unlinked crate `nmp_core`
   |
   = help: if you wanted to use a crate named `nmp_core`, use `cargo add nmp_core` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `nmp_core`
 --> servers\liop-node\src\grpc.rs:5:5
  |
5 | use nmp_core::v1::neural_mesh_server::NeuralMesh;
  |     ^^^^^^^^ use of unresolved module or unlinked crate `nmp_core`
  |
  = help: if you wanted to use a crate named `nmp_core`, use `cargo add nmp_core` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `nmp_core`
 --> servers\liop-node\src\grpc.rs:6:5
  |
6 | use nmp_core::v1::{IntentRequest, IntentResponse, LogicRequest, LogicResponse};
  |     ^^^^^^^^ use of unresolved module or unlinked crate `nmp_core`
  |
  = help: if you wanted to use a crate named `nmp_core`, use `cargo add nmp_core` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `nmp_core`
  --> servers\liop-node\src\main.rs:21:5
   |
21 | use nmp_core::v1::neural_mesh_server::NeuralMeshServer;
   |     ^^^^^^^^ use of unresolved module or unlinked crate `nmp_core`
   |
   = help: if you wanted to use a crate named `nmp_core`, use `cargo add nmp_core` to add it to your `Cargo.toml`

error[E0223]: ambiguous associated type
   --> servers\liop-node\src\grpc.rs:154:26
    |
154 |     ) -> Result<Response<Self::ExecuteLogicStream>, Status> {
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^
    |
help: if there were a trait named `Example` with associated type `ExecuteLogicStream` implemented for `NmpService`, you could use the fully-qualified path
    |
154 -     ) -> Result<Response<Self::ExecuteLogicStream>, Status> {
154 +     ) -> Result<Response<<NmpService as Example>::ExecuteLogicStream>, Status> {
    |

Some errors have detailed explanations: E0223, E0433.
For more information about an error, try `rustc --explain E0223`.
error: could not compile `liop-node` (bin "liop-node") due to 5 previous errors
